Fixed button margins on wrap

--- a/css/String-Bean.css
+++ b/css/String-Bean.css
@@ -23,8 +23,9 @@ h1,h2,h3,h4,h5,h6 { padding:0; padding-top:1rem; margin:0; }
     { padding-left:0.25rem; padding-right:0.25rem; }
 
 /** Buttons **/
-.button { padding-left:1.5rem; padding-right:1.5rem; padding-top:0.75rem; padding-bottom:0.75rem; color:#fff; font-size:1rem; line-height:3rem; text-decoration:none; opacity:1; display:block-inline; white-space: nowrap; }
-.button + .button { margin-left:0.5rem; } /** If two buttons then pad-left the second **/
+input.button { padding:0; margin:0; }
+.button { padding-left:1.5rem; padding-right:1.5rem; padding-top:0.75rem; padding-bottom:0.75rem; margin-left:0.25rem; position:relative; left:-0.25rem; margin-right:0.25rem; color:#fff; font-size:1rem; line-height:3rem; text-decoration:none; opacity:1; display:block-inline; white-space: nowrap; }
+.button + .button { margin-left:0.25rem; margin-right:0.25rem; } /** If two buttons then pad-left the second **/
 .button:hover { opacity:0.85; }
 .button.normal { background:#000; }
 .button.success { background:#5eae45; }
